# google-photos-metadata-fix

./: README.md  pyproject.toml
src/gphotos_meta/: __init__.py  cli.py  metadata.py  reporter.py  scanner.py
