[project]
name = "google-photos-metadata-fix"
version = "0.1.0"
description = "CLI tool to restore Google Photos Takeout metadata to images using ExifTool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyexiftool>=0.5.6",
    "rich>=13.7.0",
]

[project.scripts]
gphotos-meta = "gphotos_meta.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gphotos_meta"]
